<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameGeneral.ui.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="434dp"
        android:layout_height="428dp"
        android:layout_marginTop="216dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/confetti" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/grand_hotel"
        android:text="@string/congratulations"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="#FB0000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:ems="10"
        android:fontFamily="@font/grand_hotel"
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:hint="@string/hint"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="239dp"
        android:layout_height="80dp"
        android:fontFamily="@font/grand_hotel"
        android:text="@string/message"
        android:textAlignment="viewEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/medal"
        android:fontFamily="@font/abel"
        android:text="@string/save"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="#F1A5A5"
        android:fontFamily="@font/abel"
        android:text="@string/cancel1"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/new_game"
        app:layout_constraintTop_toTopOf="@+id/new_game" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="#F1A5A5"
        android:fontFamily="@font/abel"
        android:text="@string/new_game"
        android:textColor="#BD0C0C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/save_btn"
        tools:text="@string/new_game" />

</androidx.constraintlayout.widget.ConstraintLayout>