<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/highscorebg"
    tools:context=".GameGeneral.ui.HighScores">

    <Button
        android:id="@+id/btnResetScores"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/chilli"
        android:fontFamily="@font/amatica_sc_bold"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listHighScores" />

    <Button
        android:id="@+id/btnCloseScores"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/chilli"
        android:fontFamily="@font/amatica_sc_bold"
        android:text="@string/close"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnResetScores"
        app:layout_constraintTop_toTopOf="@+id/btnResetScores" />

    <TextView
        android:id="@+id/listHighScores"
        android:layout_width="247dp"
        android:layout_height="395dp"
        android:fontFamily="@font/grand_hotel"
        android:text="@string/textview"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtScoreMode" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="135dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ranking" />

    <TextView
        android:id="@+id/txtScoreMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>